@@ -1,3 +1,0 @@
-MD5 e7059645a6b325e19a9aeffde8f0222b ebuild-mode-1.4.tar.bz2 2450
-RMD160 13f26807de5f06a2672f5c92d06fbb71d8e7b855 ebuild-mode-1.4.tar.bz2 2450
-SHA256 3fa5d44f90c745a223d9b2eed55907a1064810f351279a5937032a839cc91cb6 ebuild-mode-1.4.tar.bz2 2450
