@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  -ebuild-mode-1.4.ebuild:
+  clean up
+
 *ebuild-mode-1.5 (22 Mar 2007)
 
   22 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
